--- a/src/index.css
+++ b/src/index.css
@@ -47,4 +47,6 @@ main {
   overflow-y: scroll;
   overflow-x: hidden;
   min-width: 380px;
+  border-top: 1px solid #cecece;
+  border-bottom: 1px solid #cecece;
 }
